--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
   <title>D3</title>
-  
   <!-- D3 -->
   <script src="//cdn.jsdelivr.net/npm/d3@5.5.0/dist/d3.min.js"></script>
-  
   <!-- Custom Styles -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@1.0.0/build/pure-min.min.css">
   <link rel="stylesheet" href="main.css">
@@ -24,12 +22,17 @@
         <option value="beacon">Beacon</option>
         <option value="pulsar">Pulsar</option>
       </select>
-      <button type="button" class="pure-button pure-button-primary">Randomise</button>
+      <button type="button" class="pure-button pure-button-primary">
+        Randomise
+      </button>
     </form>
   </div>
-  <div class="svg-container" id="example" style="max-width: 960px"></div>
-  
+  <div class="svg-container" id="example" style="max-width: 960px">
+  </div>
   <!-- Project -->
-  <script src="index.js"></script>
+  <script src="src/style.js" type="module"></script>
+  <script src="src/index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
 </body>
+
 </html>
